<resources>
    <string name="app_name">logins</string>
    <string name="authenticationButtonAuthenticateText">Autenticar</string>
    <string name="textViewRegisterForgottenPassword">Esqueci minha senha</string>
    <string name="buttonRegisterText">Registrar</string>
    <string name="authenticationTextViewRegisterText">Registrar-se</string>
    <string name="authenticationEditTextEmailHint">Digite email</string>
    <string name="authenticationEditTextPasswordHint">Digite a senha</string>
    <string name="authenticationTextViewTitleText">Autenticação</string>
    <string name="editTxtRegisterEmailHint">Digite um email válido</string>
    <string name="textviewRegisterTitle">Registro de Email e Senha</string>
    <string name="authenticationTextViewForgottenPasswordText">Esqueci minha senha</string>
    <string name="authenticationTextViewEmailText">Email:</string>
    <string name="authenticationTextViewPasswordText">Senha:</string>
    <string name="textViewRegisterPasswordText">Senha:</string>
    <string name="createOrEditLoginTextViewRepeatPasswordText">Repita a senha:</string>
    <string name="textViewRegisterEmailText">Email:</string>
    <string name="createOrEditLoginEditTextRepeatPasswordHnt">Repita a senha</string>
    <string name="createOrEditLoginTextViewPlatformNameText">Nome da plataforma/site</string>
    <string name="createOrEditLoginEditTextPlatformNameHint">Nome da plataforma/site</string>
    <string name="textViewUserText">Nome usuario:</string>
    <string name="createOrEditLoginTextViewGeneratePasswordText">Gerar senha:</string>
    <string name="createOrEditLoginEditTextPasswordHint">Digite a senha:</string>
    <string name="createOrEditLoginEditTextUserHint">Nome usuário</string>
    <string name="createOrEditLoginButtonCancelText">Cancelar</string>
    <string name="createOrEditLoginButtonSaveText">Salvar</string>
    <string name="registerEmailPasswordTextTextUserNameHint">Digite seu nome</string>
    <string name="registerEmailPasswordTextViewUserNameText">Nome:</string>
    <string name="dialogGeneratePasswordRadioButtonAlphaNumOnlyText">Alfanumérico (Ex.: ABCabc123)</string>
    <string name="dialogGeneratePasswordRadioButtonAlphaNumSpecialCharactersUpAndLowCaseText">Alfanumérico* (Ex.: ABCabc@#$123)</string>
    <string name="dialogGeneratePasswordRadioButtonOnlyNumbersText">Somente números (Ex.: 123)</string>
    <string name="dialogGeneratePasswordRadioButtonOnlyLettersText">Somente letras (Ex.: ABCabc)</string>
    <string name="dialogGeneratePasswordTextViewTitleText">Formatar Senha</string>
    <string name="modal_password_optionsTextViewMinLengthText">Tamanho mínimo:</string>
    <string name="modal_password_optionsTextViewMaxLengthText">Tamanho da senha:</string>
    <string name="modal_password_optionsButtonCancelText">Cancelar</string>
    <string name="dialogGeneratePasswordButtonGeneratePasswordText">Gerar</string>
    <string name="dialogGeneratePasswordTextViewPasswordFormatsText">Escolha o formato da senha:</string>
    <string name="modal_password_optionsTextViewPasswordLengthText">Indique o tamanho da senha:</string>
    <string name="createOrEditLoginTextViewPasswordText">Digite a senha:</string>
    <string name="registerUserTextViewUploadPictureText">Carregar foto de exibição</string>
    <string name="optionsMenuTextViewLoggedUserNameText">User Name</string>
    <string name="optionsMenuTextViewCreateLoginText">Cadastrar Novo Login</string>
    <string name="optionsMenuTextViewLogOutText">Logout</string>
    <string name="popUpMenuCriarNovoLoginTitle">Criar Novo Login</string>
    <string name="popUpMenuLogOutTitle">LogOut</string>
    <string name="modalResetPasswordTextViewEmailText">Digite o email:</string>
    <string name="modalResetPasswordEditTextEmailHint">Digite o email</string>
    <string name="modalResetPasswordButtonCancel">Cancelar</string>
    <string name="modalResetPasswordButtonResetPasswordText">Enviar</string>
    <string name="modalResetPasswordTextViewResetPasswordText">Digite seu email abaixo e clique em ENVIAR para receber uma mensagem de recuperação de senha.</string>
    <string name="modalResetPasswordTextViewTitleText">Recuperar senha esquecida</string>
    <string name="registerUserImageViewPictureContentDescription">Imagem carregada</string>
    <string name="listLoginsImageViewLoggedUserPictureContentDescription">menu</string>
    <string name="listLoginsTextViewTitleText">Logins Cadastrados</string>
    <string name="listLoginsFloatingActionButtonCreateNewLoginContentDescription">Cadastrar novo login</string>
    <string name="registerUserButtonUploadPictureText">Foto</string>
    <string name="registerEmailPasswordButtonCancelText">Cencelar</string>
    <string name="splashImageViewContentDescription">Logo de cadeado com tons gradiente de azul</string>
    <string name="splashImageViewText">Logins</string>
    <string name="dialogGeneratePasswordEditTextPasswordLengthText">7</string>
    <string name="dialogGeneratePasswordEditTextPasswordLengthHint">Informe o tamanho da senha</string>
    <string name="authenticationCheckBoxRememberMeText">Lembrar-me</string>
    <string-array name="list1to20">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>