<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/background_rounded"
    android:backgroundTint="#D6D3D3"
    android:padding="8dp">

    <RadioGroup
        android:id="@+id/dialogGeneratePasswordRadioGroupPasswordFormats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogGeneratePasswordTextViewPasswordFormats">

        <RadioButton
            android:id="@+id/dialogGeneratePasswordRadioButtonAlphaNumSpecialCharactersUpAndLowCase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dialogGeneratePasswordRadioButtonAlphaNumSpecialCharactersUpAndLowCaseText" />


        <RadioButton
            android:id="@+id/dialogGeneratePasswordRadioButtonAlphaNumOnly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogGeneratePasswordRadioButtonAlphaNumOnlyText" />


        <RadioButton
            android:id="@+id/dialogGeneratePasswordRadioButtonOnlyNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogGeneratePasswordRadioButtonOnlyNumbersText" />

        <RadioButton
            android:id="@+id/dialogGeneratePasswordRadioButtonOnlyLetters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogGeneratePasswordRadioButtonOnlyLettersText" />
    </RadioGroup>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dialogGeneratePasswordToolbar"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialogGeneratePasswordTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogGeneratePasswordTextViewTitleText"
        android:textColor="#FBFAFA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/dialogGeneratePasswordRadioGroupPasswordFormats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/dialogGeneratePasswordToolbar"
        app:layout_constraintTop_toTopOf="@+id/dialogGeneratePasswordToolbar"
        app:layout_constraintVertical_bias="0.238" />

    <LinearLayout
        android:id="@+id/dialogGeneratePasswordLinearLayoutPasswordLength"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogGeneratePasswordTextViewPasswordLength">

        <TextView
            android:id="@+id/dialogGeneratePasswordTextViewMinLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="16dp"
            android:text="@string/modal_password_optionsTextViewMinLengthText" />

        <Spinner
            android:id="@+id/dialogGeneratePasswordSpinnerMinLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="16dp"
            android:entries="@array/list1to20" />

        <TextView
            android:id="@+id/dialogGeneratePasswordTextViewMaxLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/modal_password_optionsTextViewMaxLengthText" />

        <Spinner
            android:id="@+id/dialogGeneratePasswordSpinnerMaxLength"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/list1to20"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogGeneratePasswordLinearLayoutPasswordLength"
        >

        <Button
            android:id="@+id/modalResetPasswordButtonCancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modal_password_optionsButtonCancelText" />

        <Button
            android:id="@+id/dialogGeneratePasswordButtonResetPassword"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogGeneratePasswordButtonGeneratePasswordText" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialogGeneratePasswordTextViewPasswordFormats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/dialogGeneratePasswordTextViewPasswordFormatsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogGeneratePasswordToolbar"
        tools:layout_editor_absoluteY="71dp" />

    <TextView
        android:id="@+id/dialogGeneratePasswordTextViewPasswordLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:text="@string/modal_password_optionsTextViewPasswordLengthText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogGeneratePasswordRadioGroupPasswordFormats" />
</androidx.constraintlayout.widget.ConstraintLayout>