<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/background_rounded"
    android:backgroundTint="#D6D3D3"
    android:padding="8dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/modalResetPasswordToolbar"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/modalResetPasswordTextViewResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/modalResetPasswordTextViewResetPasswordText"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modalResetPasswordToolbar" />

    <EditText
        android:id="@+id/modalResetPasswordEditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/modalResetPasswordEditTextEmailHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modalResetPasswordEditTextEmail">

        <Button
            android:id="@+id/modalResetPasswordButtonCancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modalResetPasswordButtonCancel" />

        <Button
            android:id="@+id/dialogGeneratePasswordButtonResetPassword"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modalResetPasswordButtonResetPasswordText" />
    </LinearLayout>

    <TextView
        android:id="@+id/modalResetPasswordTextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modalResetPasswordTextViewTitleText"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/modalResetPasswordToolbar"
        app:layout_constraintEnd_toEndOf="@+id/modalResetPasswordToolbar"
        app:layout_constraintStart_toStartOf="@+id/modalResetPasswordToolbar"
        app:layout_constraintTop_toTopOf="@+id/modalResetPasswordToolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/modalResetPasswordTextViewEmailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modalResetPasswordTextViewResetPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>